; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_wbmp.c_gdImageCreateFromWBMP.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_wbmp.c_gdImageCreateFromWBMP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gdImageCreateFromWBMP(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call %struct.TYPE_5__* @gdNewFileCtx(i32* %5)
  store %struct.TYPE_5__* %6, %struct.TYPE_5__** %4, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = call i32 @gdImageCreateFromWBMPCtx(%struct.TYPE_5__* %7)
  store i32 %8, i32* %3, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32 (%struct.TYPE_5__*)*, i32 (%struct.TYPE_5__*)** %10, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %13 = call i32 %11(%struct.TYPE_5__* %12)
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local %struct.TYPE_5__* @gdNewFileCtx(i32*) #1

declare dso_local i32 @gdImageCreateFromWBMPCtx(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
